css and html updates.
orientation is fixed. margin-right problem is solved.

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
               <span class="visually-hidden">pinterest</span>
             </a>
           </li>
-          <li class="social-item icon">
+          <li class="social-item">
             <a href="#" class="tumblr-icon icon">
               <span class="visually-hidden">tumblr</span>
             </a>
