updates in html,  css
min-height заменила на padding. Добавила ссылки трендам. Изменена структура и центрирование у pop-up

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </li>
             </ul>
             <h3 class="trends-article-header">
-              Сейчас в тренде: сад на подоконнике
+              <a href="#">Сейчас в тренде: сад на подоконнике</a>
             </h3>
           </div>
         </article>
@@ -69,7 +69,7 @@
               </li>
             </ul>
             <h3 class="trends-article-header">
-              Cыры на красивых картинках из интернета: какие они на вкус?
+              <a href="#">Cыры на красивых картинках из интернета: какие они на вкус?</a>
             </h3>
           </div>
         </article>
@@ -84,7 +84,7 @@
               </li>
             </ul>
             <h3 class="trends-article-header">
-              Собираемся в первый поход в горы
+              <a href="#">Собираемся в первый поход в горы</a>
             </h3>
           </div>
         </article>
@@ -99,7 +99,7 @@
               </li>
             </ul>
             <h3 class="trends-article-header">
-              Сейчас в тренде: сколько витамина С в лимонах?
+              <a href="#">Сейчас в тренде: сколько витамина С в лимонах?</a>
             </h3>
           </div>
         </article>
@@ -401,8 +401,8 @@
               </p>
               <footer class="shop-article-footer">
                 <div class="shop-prices">
-                  <span class="shop-price">1000 Р</span>
-                  <span class="shop-price">800 Р</span>
+                  <span class="shop-price">1000 ₽</span>
+                  <span class="shop-price">800 ₽</span>
                 </div>
                 <button type="submit" class="buy-btn">
                   В магазин
@@ -424,7 +424,7 @@
               </p>
               <footer class="shop-article-footer">
                 <div class="shop-prices">
-                  <span class="shop-price">3500p</span>
+                  <span class="shop-price">3500 ₽</span>
                 </div>
                 <button type="submit" class="buy-btn">
                   В магазин
@@ -445,8 +445,8 @@
               </p>
               <footer class="shop-article-footer">
                 <div class="shop-prices">
-                  <span class="shop-price">500 Р</span>
-                  <span class="shop-price">400 Р</span>
+                  <span class="shop-price">500 ₽</span>
+                  <span class="shop-price">400 ₽</span>
                 </div>  
                 <button type="submit" class="buy-btn">
               	  В магазин
