updates in html and css
Доработан поп-ап и исправлены цены в "товарах"

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               </p>
               <footer class="shop-article-footer">
                 <div class="shop-prices">
-                  <span class="shop-price">3500 ₽</span>
+                  <span class="shop-price shop-price-alone">3500 ₽</span>
                 </div>
                 <button type="submit" class="buy-btn">
                   В магазин
